# minesweeper

./: .gitattributes  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  tile.py
assets/text/: how_to_play.txt
minesweeper/: action.py  colour.py  colours.py  difficulty.py  game.py  how_to_play.py  leaderboard.py  main_game.py  menu.py  pseudo.txt  tile.py
